Link the github logo to the github front page

--- a/create.html
+++ b/create.html
@@ -167,7 +167,7 @@
     </head>
     <body>
         <div class="navbar">
-            <div class="navbar-icon"></div>
+            <a href="http://github.com" class="navbar-icon"></a>
             <a href="http://github.com/{{user_name}}" class="navbar-user" style="background-image: url(https://avatars2.githubusercontent.com/u/{{user_id}}?v=3&s=60)" data-user-id="{{user_id}}"></a>
             <div class="navbar-inner"><div class="repository">
                 <a href="https://github.com/{{organisation}}">{{organisation}}</a>
